force-app/main/default/objects/Copado_Demo__c/fields/Copado_Email__c.field-meta.xml
<CustomField>
    <fullName>Copado_Email__c</fullName>
    <label>Copado Email</label>
    <type>Email</type>
</CustomField>