force-app/main/default/objects/Copado_Demo__c/fields/Copado_Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Copado_Promotion_Type__c</fullName>
    <label>Copado Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Promotion</fullName>
            </value>
            <value>
                <fullName>Forward Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>