force-app/main/default/objects/Copado_Demo__c/fields/Copado_Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Copado_Trigger_Type__c</fullName>
    <label>Copado Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>